comments and function descriptions

--- a/Final Assignment EPA1361/Model and Notebooks/2a. Open Exploration.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2a. Open Exploration.ipynb
@@ -173,11 +173,14 @@
     }
    ],
    "source": [
+    "# set number of scenarios\n",
     "n_scenarios = 10_000\n",
     "\n",
     "# running the model through EMA workbench, using Latin Hypercube Sampling and the reference policy\n",
     "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
-    "    experiments, outcomes = evaluator.perform_experiments(scenarios=n_scenarios, policies=reference, uncertainty_sampling=Samplers.LHS)"
+    "    experiments, outcomes = evaluator.perform_experiments(scenarios=n_scenarios,\n",
+    "                                                          policies=reference,\n",
+    "                                                          uncertainty_sampling=Samplers.LHS)"
    ],
    "metadata": {
     "collapsed": false,
@@ -188,12 +191,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "as we do not plan on using the timeseries data, we add them up into a single value. This is then saved to a pickle file for later use"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "outputs": [],
    "source": [
-    "# as we do not plan on using the timeseries data, we add them up into a single value. This is then saved to a pickle file for later use\n",
-    "\n",
     "df = pd.DataFrame()\n",
     "for k in outcomes:\n",
     "    test_list = []\n",
@@ -251,8 +261,8 @@
     "outcomes[\"A.4_Deaths_Cost\"]=outcomes[\"A.4_Expected Number of Deaths\"]*death_cost_per_person\n",
     "outcomes[\"A.5_Deaths_Cost\"]=outcomes[\"A.5_Expected Number of Deaths\"]*death_cost_per_person\n",
     "\n",
+    "# drop unnecessary columns\n",
     "to_drop = [\"A.1_Expected Number of Deaths\",\"A.2_Expected Number of Deaths\",\"A.3_Expected Number of Deaths\",\"A.4_Expected Number of Deaths\",\"A.5_Expected Number of Deaths\"]\n",
-    "\n",
     "outcomes.drop(to_drop, axis=1, inplace=True)\n",
     "outcomes['total_cost[€]']= outcomes.sum(axis=1)"
    ],
@@ -286,8 +296,9 @@
    "execution_count": 10,
    "outputs": [],
    "source": [
+    "# save to pickle file\n",
     "with open(r'..\\generated_datasets\\open_exploration_base_policy_ALL_scenarios.pkl','wb') as pickle_file:\n",
-    "    pickle.dump(results, pickle_file)\n"
+    "    pickle.dump(results, pickle_file)"
    ],
    "metadata": {
     "collapsed": false,
@@ -302,6 +313,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
+    "# store pickle file in variable\n",
     "results = pd.read_pickle(r'..\\generated_datasets\\open_exploration_base_policy_ALL_scenarios.pkl')"
    ],
    "metadata": {
@@ -326,10 +338,13 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
+    "# set number of scenarios\n",
     "n_scenarios_of_interest = 20\n",
     "\n",
+    "# sort dataframe on total cost, decreasing\n",
     "results_of_interest = results.sort_values(by='total_cost[€]', ascending=False).head(n_scenarios_of_interest)\n",
     "\n",
+    "# save the worst policies to a pickle file\n",
     "with open(r'..\\generated_datasets\\open_exploration_base_policy_worst_scenarios.pkl','wb') as pickle_file:\n",
     "    pickle.dump(results_of_interest, pickle_file)"
    ],
@@ -364,6 +379,7 @@
    "execution_count": 13,
    "outputs": [],
    "source": [
+    "# make new dataframe with aggregated columns\n",
     "total_values = pd.DataFrame()\n",
     "total_values['Expected_Annual_Damage'] = results['A.1_Expected Annual Damage'] + \\\n",
     "                                         results['A.2_Expected Annual Damage'] + \\\n",
@@ -514,18 +530,21 @@
    "source": [
     "fig, axes = plt.subplots(2)\n",
     "\n",
+    "# make boxplot\n",
     "sns.boxplot(\n",
     "    ax=axes[0],\n",
     "    data=results['total_cost[€]'],\n",
     "    orient='h',\n",
     ").set(title='total cost [€]')\n",
     "\n",
+    "# make histplot\n",
     "sns.histplot(\n",
     "    ax=axes[1],\n",
     "    data=results['total_cost[€]'],\n",
     "    bins=7,\n",
     ")\n",
     "\n",
+    "# plot plots\n",
     "plt.tight_layout()"
    ],
    "metadata": {
@@ -559,8 +578,10 @@
    "execution_count": 16,
    "outputs": [],
    "source": [
-    "x = results.iloc[:,:19]  # Only take the uncertainties\n",
+    "# Only take the uncertainties\n",
+    "x = results.iloc[:,:19]\n",
     "\n",
+    "# make the variables from the total values dataframe, take 75 percentile and up\n",
     "y_death_cost = total_values['Deaths_Cost'].values\n",
     "y_death_cost = y_death_cost > np.percentile(y_death_cost, 75)\n",
     "y_dama = total_values['Expected_Annual_Damage'].values\n",
@@ -607,12 +628,14 @@
     }
    ],
    "source": [
+    "# Perform prim analysis\n",
     "prim_alg_DC = prim.Prim(x,\n",
-    "                     y_death_cost,\n",
-    "                     threshold=0.75,\n",
-    "                     peel_alpha=0.05,) # deze variabelen nog tweaken\n",
+    "                        y_death_cost,\n",
+    "                        threshold=0.75,\n",
+    "                        peel_alpha=0.05,)\n",
     "box_DC = prim_alg_DC.find_box()\n",
     "\n",
+    "# visualize prim analysis\n",
     "box_DC.show_tradeoff()\n",
     "plt.tight_layout()\n"
    ],
@@ -667,6 +690,7 @@
     }
    ],
    "source": [
+    "# visualize\n",
     "box_DC.inspect()\n",
     "box_DC.inspect(style='graph')\n",
     "plt.tight_layout()"
@@ -693,6 +717,7 @@
     }
    ],
    "source": [
+    "# visualize boxes\n",
     "box_DC.select(-1)\n",
     "box_DC.show_pairs_scatter()\n",
     "fig = plt.gcf()\n",
@@ -737,12 +762,14 @@
     }
    ],
    "source": [
+    "# perform prim analysis\n",
     "prim_alg_DAM = prim.Prim(x,\n",
-    "                     y_dama,\n",
-    "                     threshold=0.75,\n",
-    "                     peel_alpha=0.05,) # deze variabelen nog tweaken\n",
+    "                         y_dama,\n",
+    "                         threshold=0.75,\n",
+    "                         peel_alpha=0.05,)\n",
     "box_DAM = prim_alg_DAM.find_box()\n",
     "\n",
+    "#visualize PRIM\n",
     "box_DAM.show_tradeoff()\n",
     "plt.tight_layout()"
    ],
@@ -790,9 +817,10 @@
     }
    ],
    "source": [
+    "# visualize outcomes\n",
     "box_DAM.inspect()\n",
     "box_DAM.inspect(style='graph')\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ],
    "metadata": {
     "collapsed": false,
@@ -816,10 +844,11 @@
     }
    ],
    "source": [
+    "# Visualize boxes\n",
     "box_DAM.select(-1)\n",
     "box_DAM.show_pairs_scatter(dims=[\"A.4_Bmax\",\"A.1_pfail\",\"A.2_Bmax\",\"A.3_Bmax\"])\n",
     "fig_DAM = plt.gcf()\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()"
    ],
    "metadata": {
     "collapsed": false,
@@ -846,9 +875,9 @@
    "outputs": [],
    "source": [
     "# prim_alg_INV = prim.Prim(x,\n",
-    "#                      y_invest,\n",
-    "#                      threshold=0.75,\n",
-    "#                      peel_alpha=0.05,) # deze variabelen nog tweaken\n",
+    "    #                      y_invest,\n",
+    "    #                      threshold=0.75,\n",
+    "    #                      peel_alpha=0.05,)\n",
     "# box_INV = prim_alg_INV.find_box()\n",
     "#\n",
     "# box_INV.show_tradeoff()\n",
@@ -929,10 +958,11 @@
     }
    ],
    "source": [
+    "# perform CART analysis\n",
     "cart_plot = cart.CART(x, y_death_cost, 0.05)\n",
     "cart_plot.build_tree()\n",
     "\n",
-    "# Make sure to have GraphViz installed for the tree to show up (https://www.graphviz.org/download/)\n",
+    "# Make sure to have GraphViz installed (https://www.graphviz.org/download/)\n",
     "fig = cart_plot.show_tree()\n",
     "fig.set_size_inches(12, 12)\n",
     "plt.show()"
@@ -968,10 +998,11 @@
     }
    ],
    "source": [
+    "# perform cart analysis\n",
     "cart_plot = cart.CART(x, y_dama, 0.05)\n",
     "cart_plot.build_tree()\n",
     "\n",
-    "# Make sure to have GraphViz installed for the tree to show up (https://www.graphviz.org/download/)\n",
+    "# Make sure to have GraphViz installed (https://www.graphviz.org/download/)\n",
     "fig = cart_plot.show_tree()\n",
     "fig.set_size_inches(12, 12)\n",
     "plt.show()"
@@ -988,7 +1019,7 @@
    "cell_type": "markdown",
    "source": [
     "### CART chart investment costs\n",
-    "once again, irrelevant at thuis moment"
+    "once again, irrelevant at this moment"
    ],
    "metadata": {
     "collapsed": false
