--- a/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/2b. MOEA.ipynb
@@ -85,6 +85,7 @@
     }
    ],
    "source": [
+    "# initiate model\n",
     "dike_model, planning_steps = get_model_for_problem_formulation(5)\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)"
    ],
@@ -110,6 +111,7 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
+    "# load open exploration results\n",
     "open_exploration_results = pd.read_pickle(r'..\\generated_datasets\\open_exploration_base_policy_worst_scenarios.pkl')"
    ],
    "metadata": {
@@ -134,6 +136,7 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
+    "# load scenarios into scenario instance of model.\n",
     "scenarios = []\n",
     "for row_number in range(open_exploration_results.shape[0]):\n",
     "    scenarios.append(\n",
@@ -201,6 +204,19 @@
    "source": [
     "# Mean square deviation\n",
     "def robust_sum(*data):\n",
+    "    \"\"\"\n",
+    "    Function that takes in a column of data and returns the mean square deviation.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data: array of values\n",
+    "\n",
+    "    Returns\n",
+    "    --------\n",
+    "    result: mean square difference of the input\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
     "    sumsumsum = sum(sum(sum(data)))\n",
     "\n",
     "    mean = np.mean(sumsumsum)\n",
@@ -282,6 +298,7 @@
    "execution_count": 12,
    "outputs": [],
    "source": [
+    "# define convergvence metrics for model run\n",
     "convergence_metrics = [\n",
     "    ArchiveLogger(\n",
     "        \"../archives\",\n",
@@ -363,9 +380,7 @@
     }
    ],
    "source": [
-    "# Run MORO\n",
-    "# BaseEvaluator.reporting_frequency = 0.1\n",
-    "\n",
+    "# Run MOEA\n",
     "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
     "    results, convergence = evaluator.robust_optimize(robustness_functions,\n",
     "                                                     scenarios=scenarios,\n",
@@ -421,8 +436,10 @@
     }
    ],
    "source": [
+    "# convergence data is loaded into a variable\n",
     "convergence = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies_convergence.pkl')\n",
     "\n",
+    "# convergence plot is made\n",
     "plt.plot(convergence.epsilon_progress)\n",
     "plt.xlabel(\"Number of function evaluations\")\n",
     "plt.ylabel(r\"$\\epsilon$ progress\")\n",
@@ -462,8 +479,10 @@
     }
    ],
    "source": [
+    "# Pareto policies loaded into variable\n",
     "df = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies.pkl')\n",
     "\n",
+    "# plotting of policies\n",
     "data = df.loc[:, [o.name for o in robustness_functions]]\n",
     "limits = parcoords.get_limits(data)\n",
     "paraxes = parcoords.ParallelAxes(limits)\n",
@@ -485,15 +504,6 @@
    "source": [
     "shows the relative tradeoffs. as damage costs and death costs increase, dike investments and investment costs tend to act acccordingly."
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
