--- a/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/3. Uncertainty Analysis.ipynb
@@ -83,6 +83,7 @@
     }
    ],
    "source": [
+    "# initiate model\n",
     "dike_model, planning_steps = get_model_for_problem_formulation(5)\n",
     "ema_logging.log_to_stderr(ema_logging.INFO)"
    ],
@@ -108,6 +109,7 @@
    "execution_count": 36,
    "outputs": [],
    "source": [
+    "# load pareto policies\n",
     "pareto_policies = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies.pkl')"
    ],
    "metadata": {
@@ -132,6 +134,7 @@
    "execution_count": 37,
    "outputs": [],
    "source": [
+    "# load pareto policies into policy instances of the model\n",
     "policies = []\n",
     "for row_number in range(pareto_policies.shape[0]):\n",
     "    policies.append(\n",
@@ -160,6 +163,7 @@
    "execution_count": 38,
    "outputs": [],
    "source": [
+    "# set number of scenarios\n",
     "n_scenarios = int(10_000)"
    ],
    "metadata": {
@@ -182,7 +186,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Then, run the model with the robust policies as input, and generate results over a lot of scenarios"
+    "Then, run the model with the robust policies as input, and generate results over a lot of scenarios. Commented out, as the model run is performed in the .py file (as discussed in the ReadMe)."
    ],
    "metadata": {
     "collapsed": false
@@ -203,18 +207,19 @@
     }
    ],
    "source": [
-    "with MultiprocessingEvaluator(dike_model) as evaluator:\n",
-    "    results = evaluator.perform_experiments(scenarios=n_scenarios,\n",
-    "                                            policies=policies,\n",
-    "                                            uncertainty_sampling=Samplers.LHS\n",
-    "                                            )\n",
-    "\n",
-    "with open(r'../generated_datasets/policy_uncertainty_test.pkl', 'wb') as file_pi:\n",
-    "    pickle.dump(results, file_pi)"
+    "# run uncertainty analysis\n",
+    "# with MultiprocessingEvaluator(dike_model) as evaluator:\n",
+    "#     results = evaluator.perform_experiments(scenarios=n_scenarios,\n",
+    "#                                             policies=policies,\n",
+    "#                                             uncertainty_sampling=Samplers.LHS\n",
+    "#                                             )\n",
+    "#\n",
+    "# # save results to pickle file\n",
+    "# with open(r'../generated_datasets/policy_uncertainty_test.pkl', 'wb') as file_pi:\n",
+    "#     pickle.dump(results, file_pi)"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
      "start_time": "2023-06-20T19:15:01.452756700Z"
     }
@@ -244,6 +249,7 @@
     }
    ],
    "source": [
+    "# load results and split into variables\n",
     "scenario_results = pd.read_pickle(r'../generated_datasets/policy_uncertainty_test.pkl')\n",
     "experiments, outcomes = scenario_results\n",
     "experiments"
@@ -270,6 +276,7 @@
    "execution_count": 40,
    "outputs": [],
    "source": [
+    "# move results to dataframe\n",
     "policies_all_scenarios = pd.DataFrame()\n",
     "for key, value in outcomes.items():\n",
     "    temp_df = pd.DataFrame(value, columns=[key + ' '+ str(x) for x in range(len(value[0]))])\n",
@@ -297,8 +304,10 @@
    "execution_count": 41,
    "outputs": [],
    "source": [
+    "# combine experiments and results\n",
     "experiments_and_results = pd.concat([experiments,policies_all_scenarios], axis=1)\n",
     "\n",
+    "# save to pickle file\n",
     "with open(r'../generated_datasets/policy_uncertainty_experiments_results.pkl', 'wb') as file_pi:\n",
     "    pickle.dump(experiments_and_results, file_pi)"
    ],
@@ -325,6 +334,17 @@
    "outputs": [],
    "source": [
     "def combine_columns(dataframe, name):\n",
+    "    \"\"\"\n",
+    "    Function that takes in dataframe and a column name, and inserts a column of the sums of columns that include the name of the desired column.\n",
+    "    This happens inplace, and the function does not return anything\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dataframe: dataframe with columns\n",
+    "    name: name of desired combined column\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
     "    combined_columns = []\n",
     "    for x in dataframe.columns:\n",
     "        if name in x:\n",
@@ -345,6 +365,7 @@
    "execution_count": 43,
    "outputs": [],
    "source": [
+    "# combine columns of variables\n",
     "combine_columns(policies_all_scenarios, 'Expected Annual Damage')\n",
     "combine_columns(policies_all_scenarios, 'Dike Investment Costs')\n",
     "combine_columns(policies_all_scenarios, 'Expected Number of Deaths')\n",
@@ -375,11 +396,13 @@
    "source": [
     "aggregated_outcomes = pd.concat([experiments[['scenario','policy']],policies_all_scenarios.iloc[:,-5:]], axis=1)\n",
     "\n",
+    "# generate statistics mean and std\n",
     "stats_df = pd.DataFrame()\n",
     "for column in aggregated_outcomes.iloc[:,2:].columns:\n",
     "    stats_df[column + ' mean'] = aggregated_outcomes.groupby('policy').agg({column:['mean']})\n",
     "    stats_df[column + ' std'] = aggregated_outcomes.groupby('policy').agg({column:['std']})\n",
     "\n",
+    "# save to pickle file\n",
     "with open(r'../generated_datasets/policy_uncertainty_aggregated.pkl', 'wb') as file_pi:\n",
     "    pickle.dump(aggregated_outcomes, file_pi)"
    ],
@@ -405,6 +428,7 @@
    "execution_count": 45,
    "outputs": [],
    "source": [
+    "# load pickle files into variables\n",
     "uncertainty_results = pd.read_pickle(r'../generated_datasets/policy_uncertainty_provinces.pkl')\n",
     "experiments_and_results = pd.read_pickle(r'../generated_datasets/policy_uncertainty_experiments_results.pkl')\n",
     "aggregated_outcomes = pd.read_pickle(r'../generated_datasets/policy_uncertainty_aggregated.pkl')\n",
@@ -443,6 +467,7 @@
    "source": [
     "experiments, outcomes = uncertainty_results_run\n",
     "\n",
+    "# combine time data to single column\n",
     "results_df = pd.DataFrame()\n",
     "for k in outcomes:\n",
     "    test_list = []\n",
@@ -482,6 +507,7 @@
     "results_df[\"A.4_Deaths_Cost\"]=results_df[\"A.4_Expected Number of Deaths\"]*death_cost_per_person\n",
     "results_df[\"A.5_Deaths_Cost\"]=results_df[\"A.5_Expected Number of Deaths\"]*death_cost_per_person\n",
     "\n",
+    "# drop unnecessary columns\n",
     "to_drop = [\"A.1_Expected Number of Deaths\",\"A.2_Expected Number of Deaths\",\"A.3_Expected Number of Deaths\",\"A.4_Expected Number of Deaths\",\"A.5_Expected Number of Deaths\"]\n",
     "results_df.drop(to_drop, axis=1, inplace=True)"
    ],
@@ -517,6 +543,17 @@
    "outputs": [],
    "source": [
     "def combine_columns_province(dataframe, name):\n",
+    "    \"\"\"\n",
+    "    Function that takes in dataframe and a column name, and inserts two columns of the sums of columns that include the name of the desired column, split into provinces Gelderland and Overijssel.\n",
+    "    This happens inplace, and the function does not return anything\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    dataframe: dataframe with columns\n",
+    "    name: name of desired combined column\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
     "    combined_columns_gelderland = []\n",
     "    combined_columns_overijssel = []\n",
     "    for x in dataframe.columns:\n",
@@ -526,9 +563,8 @@
     "            if x.startswith('A.4') or x.startswith('A.5'):\n",
     "                combined_columns_overijssel.append(x)\n",
     "\n",
-    "\n",
     "    dataframe['Total ' + str(name) + ' Gelderland'] = dataframe[combined_columns_gelderland].sum(axis=1)\n",
-    "    dataframe['Total ' + str(name) + ' Overijssel'] = dataframe[combined_columns_overijssel].sum(axis=1)\n"
+    "    dataframe['Total ' + str(name) + ' Overijssel'] = dataframe[combined_columns_overijssel].sum(axis=1)"
    ],
    "metadata": {
     "collapsed": false,
@@ -554,6 +590,7 @@
    "source": [
     "provinces = results_df.copy()\n",
     "\n",
+    "# combine the columns of the variables\n",
     "combine_columns_province(provinces, 'Expected Annual Damage')\n",
     "combine_columns_province(provinces, 'Dike Investment Costs')\n",
     "combine_columns_province(provinces, 'Deaths_Cost')"
@@ -580,15 +617,17 @@
    "execution_count": 50,
    "outputs": [],
    "source": [
+    "# combine experiments number and policy number and outcomes\n",
     "aggregated_outcomes_provinces = pd.concat([experiments[['scenario','policy']],provinces], axis=1).iloc[:,2:]\n",
     "\n",
+    "# drop non-aggregated columns\n",
     "for x in aggregated_outcomes_provinces.columns:\n",
-    "\n",
     "        if x.startswith('A.1') or x.startswith('A.2') or x.startswith('A.3') or x.startswith('A.4') or x.startswith('A.5'):\n",
     "            aggregated_outcomes_provinces.drop(x, axis=1, inplace=True)\n",
     "        else:\n",
     "            pass\n",
     "\n",
+    "# generate sum variables\n",
     "aggregated_outcomes_provinces['total_cost[€]']= aggregated_outcomes_provinces.sum(axis=1)\n",
     "overijssel_sum = ['RfR Total Costs','Expected Evacuation Costs','Total Expected Annual Damage Overijssel','Total Dike Investment Costs Overijssel','Total Deaths_Cost Overijssel']\n",
     "aggregated_outcomes_provinces['total_cost[€]_overijssel']= aggregated_outcomes_provinces.loc[:,overijssel_sum].sum(axis=1)"
@@ -615,9 +654,11 @@
    "execution_count": 51,
    "outputs": [],
    "source": [
+    "# add policy number\n",
     "aggregated_outcomes_provinces_policy = aggregated_outcomes_provinces.copy()\n",
     "aggregated_outcomes_provinces_policy['policy'] = experiments.iloc[:,-2]\n",
     "\n",
+    "# save to pickle file\n",
     "with open(r'..\\generated_datasets\\policy_all_scenarios.pkl','wb') as pickle_file:\n",
     "    pickle.dump(aggregated_outcomes_provinces_policy, pickle_file)"
    ],
@@ -653,11 +694,21 @@
    "outputs": [],
    "source": [
     "def mean_square_deviation(df_input, df_output, column_name):\n",
+    "    \"\"\"\n",
+    "    Function that takes in a dataframe, and returns the mean square deviation of a desired column for each group of the grouping into a new dataframe.\n",
+    "    This happens inplace, the function does not return anything.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df_input: dataframe with columns of values\n",
+    "    df_output: dataframe for output\n",
+    "    column_name: desired column for which the mean square deviation is calculated.\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
     "    grouping = df_input.groupby(['policy']).agg({column_name:['mean', 'std']})\n",
     "    df_output['MSD ' + column_name] = np.square(grouping[(column_name, 'mean')]) + np.square(grouping[(column_name, 'std')])\n",
-    "    grouping.drop([(column_name, 'mean'), (column_name, 'std')], axis=1, inplace=True)\n",
-    "\n",
-    "    #return grouping"
+    "    grouping.drop([(column_name, 'mean'), (column_name, 'std')], axis=1, inplace=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -683,6 +734,7 @@
    "source": [
     "robust_df = pd.DataFrame()\n",
     "\n",
+    "# calculate robustness metrics for variables\n",
     "mean_square_deviation(aggregated_outcomes_provinces_policy, robust_df, 'RfR Total Costs')\n",
     "mean_square_deviation(aggregated_outcomes_provinces_policy, robust_df, 'Expected Evacuation Costs')\n",
     "mean_square_deviation(aggregated_outcomes_provinces_policy, robust_df, 'Total Expected Annual Damage Overijssel')\n",
@@ -711,7 +763,9 @@
    "execution_count": 65,
    "outputs": [],
    "source": [
+    "# generate mean and std\n",
     "grouping = aggregated_outcomes_provinces_policy.groupby(['policy']).agg({'total_cost[€]_overijssel':['mean', 'std']})\n",
+    "# generate robustness metric of total cost overijssel\n",
     "grouping[('total_cost[€]_overijssel','mean square deviation')] = np.square(grouping[('total_cost[€]_overijssel', 'mean')]) + np.square(grouping[('total_cost[€]_overijssel', 'std')])"
    ],
    "metadata": {
@@ -739,8 +793,8 @@
    "source": [
     "n_scenarios_of_interest = 5\n",
     "\n",
+    "# save 5 best policies\n",
     "results_of_interest_overijssel = grouping.sort_values(by=('total_cost[€]_overijssel','mean square deviation'), ascending=True).head(n_scenarios_of_interest)\n",
-    "\n",
     "with open(r'..\\generated_datasets\\final_policies_overijssel.pkl','wb') as pickle_file:\n",
     "    pickle.dump(results_of_interest_overijssel, pickle_file)\n",
     "\n",
@@ -777,6 +831,7 @@
     }
    ],
    "source": [
+    "# visualize 5 best policy robustness metrics\n",
     "data = robust_df.iloc[results_of_interest_overijssel.index.values]\n",
     "limits = parcoords.get_limits(data)\n",
     "paraxes = parcoords.ParallelAxes(limits, rot=10)\n",
@@ -813,13 +868,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "robust_df = pd.DataFrame()\n",
     "\n",
+    "# generate death cost variable\n",
     "aggregated_outcomes['Total Deaths_Cost'] = aggregated_outcomes['Total Expected Number of Deaths']*death_cost_per_person\n",
     "\n",
+    "# generate robustness metric outcomes of variables\n",
     "mean_square_deviation(aggregated_outcomes, robust_df, 'Total Expected Annual Damage')\n",
     "mean_square_deviation(aggregated_outcomes, robust_df, 'Total Dike Investment Costs')\n",
     "mean_square_deviation(aggregated_outcomes, robust_df, 'Total Deaths_Cost')\n",
@@ -827,11 +884,7 @@
     "mean_square_deviation(aggregated_outcomes, robust_df, 'Total Expected Evacuation Costs')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-21T17:45:44.601183600Z",
-     "start_time": "2023-06-21T17:45:44.548961900Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -848,6 +901,7 @@
    "execution_count": 73,
    "outputs": [],
    "source": [
+    "# generate robustness metric of total cost\n",
     "grouping = aggregated_outcomes_provinces_policy.groupby(['policy']).agg({'total_cost[€]':['mean', 'std']})\n",
     "grouping[('total_cost[€]','mean square deviation')] = np.square(grouping[('total_cost[€]', 'mean')]) + np.square(grouping[('total_cost[€]', 'std')])"
    ],
@@ -876,8 +930,8 @@
    "source": [
     "n_scenarios_of_interest = 5\n",
     "\n",
+    "# save top 5 policies\n",
     "results_of_interest = grouping.sort_values(by=('total_cost[€]','mean square deviation'), ascending=True).head(n_scenarios_of_interest)\n",
-    "\n",
     "with open(r'..\\generated_datasets\\final_policies.pkl','wb') as pickle_file:\n",
     "    pickle.dump(results_of_interest, pickle_file)\n",
     "\n",
@@ -905,6 +959,7 @@
     }
    ],
    "source": [
+    "# visualize top 5 policies\n",
     "data = robust_df.iloc[results_of_interest.index.values]\n",
     "limits = parcoords.get_limits(data)\n",
     "paraxes = parcoords.ParallelAxes(limits, rot=10)\n",
@@ -954,6 +1009,7 @@
     }
    ],
    "source": [
+    "# show levers of top 5 policies\n",
     "policies = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies.pkl')\n",
     "policies.iloc[results_of_interest_overijssel.index.values].T"
    ],
@@ -989,6 +1045,7 @@
     }
    ],
    "source": [
+    "# show levers of top 5 policies\n",
     "policies = pd.read_pickle(r'../generated_datasets/initial_Pareto_policies.pkl')\n",
     "policies.iloc[results_of_interest.index.values].T"
    ],
