--- a/Final Assignment EPA1361/Model and Notebooks/4. Scenario Discovery.ipynb
+++ b/Final Assignment EPA1361/Model and Notebooks/4. Scenario Discovery.ipynb
@@ -67,9 +67,11 @@
    "execution_count": 71,
    "outputs": [],
    "source": [
+    "# load results into variables\n",
     "uncertainty_results_run = pd.read_pickle(r'../generated_datasets/policy_uncertainty_test.pkl')\n",
     "outcomes_overijssel = pd.read_pickle(r'..\\generated_datasets\\policy_all_scenarios.pkl')\n",
     "\n",
+    "# split results\n",
     "experiments, results = uncertainty_results_run"
    ],
    "metadata": {
@@ -113,6 +115,7 @@
     }
    ],
    "source": [
+    "# perform and visualize prim\n",
     "x = experiments.iloc[:, :19]\n",
     "y = outcomes_overijssel['total_cost[€]_overijssel'].values\n",
     "y = y > np.percentile(y, 75)\n",
@@ -205,6 +208,7 @@
     }
    ],
    "source": [
+    "# perform and visualize prim\n",
     "x = experiments.iloc[:, :19]\n",
     "y = outcomes_overijssel['total_cost[€]'].values\n",
     "y = y > np.percentile(y, 75)\n",
